NetBSD Problem Report #41900

From www@NetBSD.org  Mon Aug 17 07:44:58 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id C0B8363C285
	for <gnats-bugs@gnats.netbsd.org>; Mon, 17 Aug 2009 07:44:58 +0000 (UTC)
Message-Id: <20090817074458.931DE63BDF9@www.NetBSD.org>
Date: Mon, 17 Aug 2009 07:44:58 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Line broken in dumpstate.c
X-Send-Pr-Version: www-1.0

>Number:         41900
>Category:       xsrc
>Synopsis:       Line broken in dumpstate.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    mrg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 17 07:45:00 +0000 2009
>Closed-Date:    Tue Jun 01 04:22:02 +0000 2010
>Last-Modified:  Tue Jun 01 04:25:06 +0000 2010
>Originator:     Henning Petersen
>Release:        
>Organization:
>Environment:
>Description:
Line broken in dumpstate.c
>How-To-Repeat:

>Fix:
diff -u -r1.1.1.1 dumpstate.c
--- MesaLib/dist/progs/util/dumpstate.c	29 Jul 2008 05:10:46 -0000	1.1.1.1
+++ MesaLib/dist/progs/util/dumpstate.c	17 Aug 2009 07:00:35 -0000
@@ -1610,7 +1610,7 @@
         for( i= 0; i < 16; ++i ) m[i]= 0.0;                \
         glGetFloatv(GL_##VAR,m);                           \
         fprintf( OUT,                                      \
-                 "%s:\n\t[%+.6f %+.6f %+.6f %+.6f]\n\t[%+.6f %+.6f %+.6f 
+                 "%s:\n\t[%+.6f %+.6f %+.6f %+.6f]\n\t[%+.6f %+.6f %+.6f \
 %+.6f]\n\t[%+.6f %+.6f %+.6f %+.6f]\n\t[%+.6f %+.6f %+.6f %+.6f]\n", \
                  #VAR,                                     \
                  m[0+0*4], m[0+1*4], m[0+2*4], m[0+3*4],   \

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: xsrc-manager->mrg
Responsible-Changed-By: mrg@NetBSD.org
Responsible-Changed-When: Tue, 01 Jun 2010 03:08:47 +0000
Responsible-Changed-Why:
seems reasonable fix, and still applies to modern MesaLib.


State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 01 Jun 2010 04:22:02 +0000
State-Changed-Why:
change applied. thanks.


From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41900 CVS commit: xsrc/external/mit/MesaLib/dist/progs/util
Date: Tue, 1 Jun 2010 04:21:27 +0000

 Module Name:	xsrc
 Committed By:	mrg
 Date:		Tue Jun  1 04:21:27 UTC 2010

 Modified Files:
 	xsrc/external/mit/MesaLib/dist/progs/util: dumpstate.c

 Log Message:
 fix a macro definition error, as per PR#41900 from Henning Petersen.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.2 \
     xsrc/external/mit/MesaLib/dist/progs/util/dumpstate.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.