fix a macro definition error, as per PR#41900 from Henning Petersen.